k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: neighborly-ingress
    namespace: neighborly
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: neighborly.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: gateway-service
                            port:
                                number: 3241
                  - path: /api/users
                    pathType: Prefix
                    backend:
                        service:
                            name: users-service
                            port:
                                number: 3001
                  - path: /api/tasks
                    pathType: Prefix
                    backend:
                        service:
                            name: tasks-service
                            port:
                                number: 3002
                  - path: /api/reviews
                    pathType: Prefix
                    backend:
                        service:
                            name: reviews-service
                            port:
                                number: 5111
                  - path: /api/leaderboards
                    pathType: Prefix
                    backend:
                        service:
                            name: leaderboards-service
                            port:
                                number: 3003
